@@ -1,42 +1,86 @@
 package com.sartiniomar.library.loan.domain.loan;
 
+import com.sartiniomar.library.loan.domain.bookInstance.BookInstanceNotAvailableException;
 import com.sartiniomar.library.loan.domain.bookInstance.BookInstance;
+import com.sartiniomar.library.loan.domain.bookInstance.BookInstanceStatus;
 import com.sartiniomar.library.loan.domain.bookInstance.BookType;
+import com.sartiniomar.library.loan.domain.loan.reserve.ReserveBookEvent;
+import com.sartiniomar.library.loan.domain.loan.reserve.ReserveService;
 import com.sartiniomar.library.loan.domain.patron.Patron;
 import com.sartiniomar.library.loan.domain.patron.PatronType;
+import lombok.SneakyThrows;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import java.util.UUID;
+import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class ReserveServiceTest {
 
+  private static Stream<Arguments> provideDataForBookInstancesStateAreNotAvailable() {
+    return Stream.of(
+        Arguments.of("RESERVED"),
+        Arguments.of("LENT"),
+        Arguments.of("UNAVAILABLE")
+    );
+  }
+
   @Test
   void should_place_hold_when_all_conditions_are_met() {
-
     Patron patron = new Patron(UUID.randomUUID(), PatronType.REGULAR);
-    BookInstance book = new BookInstance(UUID.randomUUID(), UUID.randomUUID(), BookType.CIRCULATING, false);
+    BookInstance book = new BookInstance(
+        UUID.randomUUID(), UUID.randomUUID(), BookType.CIRCULATING, BookInstanceStatus.AVAILABLE, false);
 
     ReserveService service = new ReserveService();
-
     DomainResult<Loan> result = service.reserve(patron, book);
 
-    // ✅ resultado no nulo
     assertNotNull(result);
     assertNotNull(result.result());
 
     Loan hold = result.result();
 
-    // ✅ validar el Loan creado
+    assertNotNull(hold.getId());
     assertEquals(patron.getId(), hold.getPatronId());
     assertEquals(book.getId(), hold.getBookInstanceId());
-    assertNotNull(hold.getId());
+    assertEquals(BookInstanceStatus.AVAILABLE, book.getStatus());
 
-    // ✅ validar evento
     assertEquals(1, result.events().size());
-    assertInstanceOf(ReserveBookEvent.class, result.events().get(0));
+    assertInstanceOf(ReserveBookEvent.class, result.events().getFirst());
   }
 
+  @Test void should_throw_exception_when_book_is_restricted_and_patron_is_regular() {
+    Patron patron = new Patron(UUID.randomUUID(), PatronType.REGULAR);
+    BookInstance book = new BookInstance(
+        UUID.randomUUID(), UUID.randomUUID(), BookType.RESTRICTED, BookInstanceStatus.AVAILABLE, false);
+    ReserveService service = new ReserveService();
+
+    OnlyResearcherCanLoanRestrictedBooksException ex =
+        assertThrows(OnlyResearcherCanLoanRestrictedBooksException.class,
+            () -> service.reserve(patron, book)
+        );
+
+    assertEquals("Only Researcher Can Loan Restricted Books!", ex.getMessage());
+  }
+
+  @ParameterizedTest
+  @MethodSource("provideDataForBookInstancesStateAreNotAvailable")
+  @SneakyThrows
+  void should_throw_exception_when_book_is_not_available(BookInstanceStatus state) {
+    Patron patron = new Patron(UUID.randomUUID(), PatronType.REGULAR);
+    BookInstance book = new BookInstance(UUID.randomUUID(), UUID.randomUUID(), BookType.CIRCULATING, state, false);
+    ReserveService service = new ReserveService();
+
+    BookInstanceNotAvailableException ex =
+        assertThrows(BookInstanceNotAvailableException.class,
+            () -> service.reserve(patron, book)
+        );
+
+    assertEquals("Book Already Unavailable!", ex.getMessage());
+  }
 }
